--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{
     margin: 0%;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 button{
@@ -67,7 +68,7 @@ button:hover{
 #hero-main-text{
     color: #f9faf8;
     font-size: 48px;
-    font-weight: extra-bold;
+    font-style: bolder;
     margin: 0;
 }
 
@@ -77,3 +78,69 @@ button:hover{
     margin: 0;
     padding-bottom: 10px;
 }
+
+/*  section 2   */
+.section2{
+    height: 350px;
+}
+
+.section2-text{
+    font-size: 36px;
+    font-weight: 600;
+    text-align: center;
+}
+
+.img-folio-container{
+    display: flex;
+    width: 60%;
+    height: 60%;
+    padding-left: 20%;
+    padding-right: 20%;
+    justify-content: space-between;
+}
+
+.img-folio{
+    height: 80%;
+    width: 80%;
+    border: 5px solid #3882f6;
+    border-radius: 10px;
+}
+
+.img-folio-item{
+    height: 80%;
+    width: 20%;
+    flex: 0 1 auto;
+}
+
+.section3{
+    background-color: #e5e7eb;
+    height: 350px;
+}
+
+.section3-container{
+    width: 60%;
+    justify-content: center;
+    padding-left: 20%;
+    padding-right: 20%;
+}
+
+.section3-item .testimonial{
+    padding-top: 75px;
+}
+
+.testimonial-subtext{
+    text-align: right;
+    font-size: 20px;
+    color: grey;
+    padding-bottom: 75px;
+}
+
+.section3-item{
+    flex: 0;
+}
+.testimonial{
+    font-size: 36px;
+    font-style: italic;
+}
+
+
