--- a/style.css
+++ b/style.css
@@ -144,3 +144,62 @@ button:hover{
 }
 
 
+.section4{
+    height: 250px;
+}
+
+.section4-container{
+    display: flex;
+    width: 70%;
+    height: 150px;
+    margin-left: 15%;
+    margin-right: 15%;
+    margin-top: 100px;
+    background-color: #3882f6;
+    border: 5px solid #3882f6;
+    border-radius: 5px;
+}
+
+.section4-left{
+    flex: 1;
+    padding-top: 40px;
+    padding-bottom: 30px;
+    padding-left: 30px;
+}
+
+.section4-left .main{
+    font-size: 25px;
+    margin: 0%;
+    font-weight: 700;
+    color: #f9faf8
+}
+
+.section4-left .sub{
+    font-size:medium;
+    font-weight: 600;
+    color: lightgray
+}
+
+
+.section4-right{
+    flex: .5;
+    padding-top: 50px;
+    padding-bottom: 30px;
+    padding-left: 30px;
+}
+
+.section4-right button{
+    height: 40px;
+    width: 120px;
+    background-color: aqua;
+}
+
+.footnote{
+    background-color: #1f2937;
+    font-size: 12px;
+    color: lightslategray;
+    text-align: center;
+    padding-top: 10px;
+    margin: 0;
+    height: 50px;
+}
